--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,17 @@ dependencies {
 
 compileKotlin2Js.kotlinOptions.moduleKind = "commonjs"
 
+build.doLast {
+  configurations.compile.each { File file ->
+    copy {
+      includeEmptyDirs = false
+
+        from zipTree(file.absolutePath)
+        into "${projectDir}/web"
+        include { fileTreeElement ->
+          def path = fileTreeElement.path
+            path.endsWith(".js") && (path.startsWith("META-INF/resources/") || !path.startsWith("META-INF/"))
+        }
+    }
+  }
+}
