--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node node/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
